[gd_scene load_steps=21 format=3 uid="uid://dp2nc828ubgtu"]

[ext_resource type="Script" path="res://enemies/boss_drone_1.gd" id="1_uuju8"]
[ext_resource type="Texture2D" uid="uid://bhrf0wqcvqpk7" path="res://enemies/BigEnergyBall.png" id="2_882ha"]
[ext_resource type="Texture2D" uid="uid://cr28y0bd8l5wm" path="res://effects/Free Smoke Fx  Pixel 05.png" id="2_mkk56"]
[ext_resource type="AudioStream" uid="uid://dkkc6n5od4tfa" path="res://audio/ESM_Retro_Game_Classic_Explosion_6_8_Bit_Arcade_80s_Weapon_Attack.wav" id="4_sucl3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_mmgum"]
atlas = ExtResource("2_882ha")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ma643"]
atlas = ExtResource("2_882ha")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_nrg13"]
atlas = ExtResource("2_882ha")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_xc3t5"]
atlas = ExtResource("2_882ha")
region = Rect2(72, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_42gou"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mmgum")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ma643")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nrg13")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xc3t5")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_43in4"]
radius = 12.0

[sub_resource type="AtlasTexture" id="AtlasTexture_6sn1u"]
atlas = ExtResource("2_mkk56")
region = Rect2(0, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8rr3w"]
atlas = ExtResource("2_mkk56")
region = Rect2(64, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_407vi"]
atlas = ExtResource("2_mkk56")
region = Rect2(128, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sm3yl"]
atlas = ExtResource("2_mkk56")
region = Rect2(192, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6qeco"]
atlas = ExtResource("2_mkk56")
region = Rect2(256, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_504hf"]
atlas = ExtResource("2_mkk56")
region = Rect2(320, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yyg77"]
atlas = ExtResource("2_mkk56")
region = Rect2(384, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_33n08"]
atlas = ExtResource("2_mkk56")
region = Rect2(448, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bfjqo"]
atlas = ExtResource("2_mkk56")
region = Rect2(512, 448, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_oidvu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6sn1u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8rr3w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_407vi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sm3yl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6qeco")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_504hf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yyg77")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_33n08")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bfjqo")
}],
"loop": false,
"name": &"default",
"speed": 15.0
}]

[node name="BossDrone1" type="Area2D"]
scale = Vector2(2.5, 2.5)
collision_layer = 64
collision_mask = 64
script = ExtResource("1_uuju8")

[node name="Timer" type="Timer" parent="."]
wait_time = 25.0
autostart = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
self_modulate = Color(0.996078, 0.290196, 0.533333, 1)
rotation = 4.71239
sprite_frames = SubResource("SpriteFrames_42gou")
autoplay = "default"
frame_progress = 0.483455

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 0)
shape = SubResource("CircleShape2D_43in4")

[node name="AnimatedSprite2D3" type="AnimatedSprite2D" parent="."]
visible = false
self_modulate = Color(1, 0.302668, 0.846189, 1)
scale = Vector2(0.7, 0.7)
sprite_frames = SubResource("SpriteFrames_oidvu")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_sucl3")
volume_db = -5.0

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="animation_finished" from="AnimatedSprite2D3" to="." method="_on_animated_sprite_2d_3_animation_finished"]
